src/styles/app.sass
@import url("https://use.typekit.net/xle6haa.css")
@mixin lato()
  font-family: lato, sans-serif
  font-style: normal
  font-weight: 200
@mixin myriad()
  font-family: myriad-pro-condensed, sans-serif
  font-weight: 700
  font-style: normal
@mixin gothic()
  font-family: league-gothic-condensed, sans-serif
  font-weight: 400
  font-style: italic

//DEFINE MEDIA QUERIES//
$breakpoints: ( 'xx-small': (max-width: 375px), 'small':  ( min-width:  375px ),'medium': ( min-width:  750px ),'large':  ( min-width: 1200px ))!default
@mixin respond-to($breakpoint) 
  // If the key exists in the map
  @if map-has-key($breakpoints, $breakpoint) 
    // Prints a media query based on the value
    @media #{inspect(map-get($breakpoints, $breakpoint))} 
      @content
    
  // If the key doesn't exist in the map
  @else 
    @warn "Unfortunately, no value could be retrieved from `#{$breakpoint}`. " + "Available breakpoints are: #{map-keys($breakpoints)}."
$colors: #592941, #498467, #52B788, #B2D3A8, #EDE5A6
$navy: #181026
$repeat: 4
//LOOP BACKGROUND COLORS
@for $i from 1 through $repeat 
  .container:nth-child(#{length($colors)}n+#{$i}) 
      background: nth($colors, $i)
.container
  height: 89vh
.anchor 
  display: block
  position: relative
  top: -12vh

.landing
  padding-top: 15vh
  position: relative
.projects
  height: auto
.bio
  @include respond-to('xx-small')
    div
      p
        font-size: 2vh
  @include respond-to('small')
  height: 89vh
     
.avatar
  position: absolute
  bottom: 0
  right: 0
  @include respond-to('small')
      height: 40vh
  @include respond-to('medium')
      height: 40vh
App 
  text-align: center
  height: 5000px

.scrollTop, .scrollDown
  position: fixed
  width: 100%
  bottom: 20px
  align-items: center
  height: 20px
  z-index: 1000
  opacity: 0.5
  cursor: pointer
  justify-content: center
  animation: fadeIn 0.3s
  transition: opacity 0.4s
.scrollTop:hover, .scrollDown:hover
  opacity: 1
.slogan
  @include lato()
  background-color: white
  position: absolute
  margin-top: 20vh
  padding: 5vh 10vh 5vh 0vh
  @include respond-to('small')
      font-size: 45px
  @include respond-to('medium')
      font-size: 60px
@keyframes fadeIn 
  0% 
    opacity: 0
  
  100% 
    opacity: 0.5
h1, h2, h3
  @include myriad()
.filterBtn
  @include lato()
  background-color: $navy
  color: white
  font-size: 1.5vh
  margin: .5vh 0vh
  @include respond-to('small')
    height: 23px
    width: 15vh
  @include respond-to('medium')
    width: 18vh
    height: 25px
.filterBtn:hover
  border-color: red
.filters
  text-align: center
  

  

